[tool.poetry]
name = "bes_functions"
version = "0.1.0"
description = "A collection of cloud functions related to Blaise Editing Service"
authors = ["Thomas Wills <62559442+Willst1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^24.3.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
codecov = "^2.1.13"
google-cloud-logging = "^3.10.0"
mypy = "^1.10.0"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.23"
flask = "^2.0.0"
blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client.git", rev = "main"}


[tool.poetry.group.dev.dependencies]
mock-alchemy = "^0.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
