[tool.poetry]
package-mode = false
name = "bes_functions"
version = "0.1.0"
description = "A collection of cloud functions related to Blaise Editing Service"
authors = ["Blaise Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
black = "^25.1.0"
pytest = "^8.1.1"
pytest-cov = "^6.2.1"
codecov = "^2.1.13"
google-cloud-logging = "^3.15.0"
mypy = "^1.10.0"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.49"
flask = "^3.1.3"
blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client", rev = "v1.0.2"}
requests = "^2.34.2"


[tool.poetry.group.dev.dependencies]
mock-alchemy = "^0.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true